--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -22,7 +22,6 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700081.md#1" target="_blank">林保华：香港将引领中国风向 ?</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700081.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020145571501-150x120.jpg" align ="left"></a>香港的反送中运动已经延续半年了。虽然在全球产生了反响，在中国似乎动静不大。这个原因当然与中国对新闻的封锁与歪曲有关，然而纸包不住火，尤其中国已经不是完全封闭的国家，只是在高压下，人们暂时不敢出声，但是能量累计下来，会有爆发的一天。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700006.md#1" target="_blank">项云：共产党为什么把“面子”视同生命</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700006.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1201280706361944-150x120.jpg" align ="left"></a>所有共产政权都顽固维护党和党魁形象，形同维护命根。事实上共产党形象、体面确实关乎其生命存亡。由于共产党从产生起一直作恶到现在，其体面形象也一直在破损，如今只剩“面子”这一不完整形象了，如果这点形象破败共产党生命也就彻底结束，其原因如下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 9:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11699872.md#1" target="_blank">严晓：是“除暴安良”还是助纣为虐？</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11699872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1909290658571501-150x120.jpg" align ="left"></a>在回答这一问题之前，先让我们看三组数字。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704921.md#1" target="_blank">启明：共产党注定灭亡</a><br></h3>世界上只有不信神的人，没有不信神的民族。人性是本善的，人是可贵的万物之灵，是神所看护的生命，而共产党这个东西它是反传统反神迷恋暴力的，所以它只能找那些反传统不信神的人附体，这必定会遭到正常人的反感和反对。制造仇恨崇尚暴力发动暴乱制造恐怖是它在世间立足的手段，以此来恐吓善良的人们对它们予以姑息和纵容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705085.md#1" target="_blank">廖祖笙：饿饭党治下的饿饭国</a><br></h3>习近平先生，你也一定知道，你现在担任党魁的这个党，过去是个饿饭党，在未得江山之前，因为饥肠辘辘，常忽悠国民上街闹事，大张旗鼓“反饥饿反迫害”，直闹得国民政府鸡犬不宁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705046.md#1" target="_blank">陈达：广州主干道塌陷中共填坑埋人意味着什么</a><br></h3>泡沫崛起道似平，
 马龙车水忙不停。
@@ -51,5 +50,6 @@
 宪法誉民主人翁，党握权柄独裁疯......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 12:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701121.md#1" target="_blank">宁静：中共改编《天仙配》摧毁孝道败坏人伦</a><br></h3>关于七仙女下嫁凡人董永的传说，是中国古代最重要的神仙故事之一，有着和嫦娥奔月同样的份量。在魏晋时，就已见于曹植的《灵宝篇》和干宝的《搜神记》，从唐代的《董永变文》，到宋元话本《董永遇仙传》、再到明代青阳腔《织锦记》都说的是一样的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:28 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700683.md#1" target="_blank">渔夫：两个世界的华为（被删网文）</a><br></h3>这个世界上，一定存在着两个华为：一个是孟晚舟的华为，一个是李洪元的华为。孟晚舟的华为有国家大叙事的加持，越来越矫情，也越来越傲娇；李洪元的华为则脱去一切伪装，越来越真实，越来越卑微。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:37 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11699922.md#1" target="_blank">雪绮：亡共大戏中的选择</a><br></h3>特务出逃事件，想必已为“天灭中共”、令世人所深切期待的亡共大戏，揭开了精彩的序幕！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 6:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iqwytd266/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iqwytd266/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
